# caskfolio-backend-django

./: .env.example  README.md  pyproject.toml
apps/accounts/: admin.py  models.py  serializers.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py
apps/collection/: models.py  serializers.py  urls.py  views.py
apps/collection/migrations/: 0001_initial.py
apps/curator/: admin.py  apps.py  curator_service.py  models.py  serializers.py  urls.py  views.py
apps/curator/migrations/: 0001_initial.py
apps/tasting/: apps.py  models.py  serializers.py  urls.py  views.py
apps/tasting/migrations/: 0001_initial.py
apps/whisky/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/whisky/fixtures/: initial_data.json
apps/whisky/migrations/: 0001_initial.py
config/: settings.py  urls.py
docs/1차/: 1차 기능명세서.md  1차 모델링.py  convention.md
docs/미완성/: 1차.sql  convention.md
