[project]
name = "my-whisky-project"
version = "0.1.0"
description = ""
authors = [
    {name = "ironhamlab",email = "03110315@naver.com"}
]
readme = "README.md"
requires-python = ">=3.14, <4.0.0"
dependencies = [
    "django (>=6.0.2,<7.0.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "dj-rest-auth (>=7.1.1,<8.0.0)",
    "django-allauth (>=65.14.3,<66.0.0)",
    "djangorestframework-simplejwt (>=5.5.1,<6.0.0)",
    "django-cors-headers (>=4.9.0,<5.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "cryptography (>=46.0.5,<47.0.0)",
    "pillow (>=12.1.1,<13.0.0)",
    "django-filter (>=25.2,<26.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "openai (>=2.26.0,<3.0.0)",
    "langchain (>=1.2.10,<2.0.0)",
    "langchain-openai (>=1.1.11,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
